fix: change header z-index

--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -3,9 +3,8 @@
   position: absolute;
   top: 0;
   left: 0;
+  z-index: 5;
   width: 100%;
-
-
 
   &--main {
     background-color: $white;
